# gcrun

./: AUTHORS  CMakeLists.txt  config.h.cmake
config/: gcrunrc
locale/zh_CN/LC_MESSAGES/: gcrun.mo
po/: gcrun.pot  mo_update.sh  msginit.sh  po_update.sh  zh_CN.po
src/: CMakeLists.txt  config.h  gc_config.c  gc_config.h  gc_entry.c  gc_entry.h  gc_log.c  gc_log.h  gc_main_window.c  gc_main_window.h  main.c
